--- a/PragimCourses/PragimCourses/Views/Home/Index.cshtml
+++ b/PragimCourses/PragimCourses/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="carousel-inner" role="listbox">
         <div class="item active">
 
-            <div class="carousel-image" style="background-image:url('../../PragimCourses/Content/Images/banner-1.jpg') "></div>
+            <div class="carousel-image" style="background-image:url('../../PragimCourses/Content/Images/banner-1.jpg'),url('../../Content/Images/banner-1.jpg') "></div>
             <div class="carousel-caption">
                 <h1>Class Room Courses</h1>
                 <p>Come and experience quality learning offered by PRAGIM's best Trainers</p>
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="item">
-            <div class="carousel-image" style="background-image:url('../../PragimCourses/Content/Images/banner-2.jpg') "></div>
+            <div class="carousel-image" style="background-image:url('../../PragimCourses/Content/Images/banner-2.jpg'),url('../../Content/Images/banner-2.jpg') "></div>
 
             <div class="carousel-caption">
                 <h1>Free Online Courses</h1>
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="item">
-            <div class="carousel-image" style="background-image:url('../../PragimCourses/Content/Images/banner-3.jpg') "></div>
+            <div class="carousel-image" style="background-image:url('../../PragimCourses/Content/Images/banner-3.jpg'),url('../../Content/Images/banner-3.jpg') "></div>
 
             <div class="carousel-caption">
                 <h1>Download Courses</h1>
@@ -82,7 +82,7 @@
 
         </div>
         <div class="item">
-            <div class="carousel-image" style="background-image:url('../../PragimCourses/Content/Images/banner-5.jpg') "></div>
+            <div class="carousel-image" style="background-image:url('../../PragimCourses/Content/Images/banner-5.jpg'),url('../../Content/Images/banner-5.jpg') "></div>
 
             <div class="carousel-caption">
                 <h1>New Training Courses</h1>
@@ -204,7 +204,7 @@
                 </p>
             </div>
             <div class="col-xs-12 col-md-4">
-                <span class="glyphicon glyphicon-phone"></span>
+                <span class="fa fa-laptop"></span>
                 <h2>Learn On Any Device</h2>
                 <p>
                     Real world project-based training by working software professionals with over 10 years experience.
@@ -350,7 +350,7 @@
                 </p>
             </div>
             <div class="col-xs-12 col-md-4">
-                <span class="glyphicon glyphicon-phone"></span>
+                <span class="fa fa-laptop "></span>
                 <h2>Highly skilled and experienced team</h2>
                 <p>
                     Our development team is thoroughly trained, skilled, experienced and love what they do.
