--- a/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
+++ b/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <li class="call">
                                 <i class="glyphicon glyphicon-phone"></i>
                                 Call us +01022169733 / 01013658438 &nbsp;|&nbsp;
-                                <i class="glyphicon glyphicon-calendar"></i> +01022169733
+                                <i style="font-size: 18px" class="fa fa-whatsapp"></i> +01022169733
                             </li>
                             @if (!User.Identity.IsAuthenticated)
                             {
