--- a/PragimCourses/PragimCourses/Views/Shared/_signup_news.cshtml
+++ b/PragimCourses/PragimCourses/Views/Shared/_signup_news.cshtml
@@ -14,8 +14,8 @@
         </div>
         <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="signup-form">
-                <input placeholder="Your Email Address" type="text" class="form-control" name="name" value="" />
-                <button class="btn btn-warning">Signup <span class="glyphicon glyphicon-arrow-right"></span> </button>
+                <input placeholder="Your Email Address" type="email" class="form-control" name="email" id="email" value=""/>
+                <button type="button" class="btn-subscribe btn btn-warning">Signup <span class="glyphicon glyphicon-arrow-right"></span> </button>
 
             </div>
         </div>
