--- a/PragimCourses/PragimCourses/Views/Courses/AddCourseDescription.cshtml
+++ b/PragimCourses/PragimCourses/Views/Courses/AddCourseDescription.cshtml
@@ -123,9 +123,11 @@
                         error.append(li);
                         return false;
                     }
+                    var url = window.location.origin;
                     $.ajax({
-                        url: 'http://localhost/PragimCourses/api/course',
+                        url: url+'/api/course',
                         data: JSON.stringify({
+                            'CourseType':ddlCourses.val(),
                             'Header': header.val(),
                             'CourseId': courseId.val(),
                             'Bodies' : bodyArray
