--- a/PragimCourses/PragimCourses/Views/Home/Support.cshtml
+++ b/PragimCourses/PragimCourses/Views/Home/Support.cshtml
@@ -65,56 +65,12 @@
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="right__support">
-                    <h1>Contact Us</h1>
-                    <div class="phone">
-                        <h6>Phone : </h6>
-                        <p>+01022169733</p>
-                        <p>+01022169733</p>
-                    </div>
-                    <div class="whatsapp">
-                        <h6>WhatsApp : </h6>
-                        <p>+01022169733</p>
-                    </div>
-                    <div class="email">
-                        <h6>Email : </h6>
-                        <p>ibrahim@gmail.com</p>
-                        <p>ahmed@gmail.com</p>
-                        <p>mohamed@gmail.com</p>
-                    </div>
-                    <div class="address">
-                        <h6>Address : </h6>
-                        <p>Outer Ring Road, Opposite</p>
-                        <p>Innovative Multiplex, 3rd Floor</p>
-                        <p>Above Unilet Showroom, Beside</p>
-                        <p>Nandas Hyderabadi Biryani,</p>
-                        <p>Marathahalli, Bangalore 560037.</p>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="signup__news">
-    <div class="container">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="right__wrap">
-                <span class="glyphicon glyphicon-envelope"></span>
-                <div class="information">
-                    <h2>Subscribe Email Alerts</h2>
-                    <p>If you wish to receive email alerts when new articles, videos or interview questions are posted on PragimTech.com, you can subscribe by providing your valid email.</p>
-                </div>
-            </div>
-
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="signup-form">
-                <input placeholder="Your Email Address" type="text" class="form-control" name="name" value="" />
-                <button class="btn btn-warning">Signup <span class="glyphicon glyphicon-arrow-right"></span> </button>
+                @Html.Partial("_contactInfo")
 
             </div>
         </div>
     </div>
 </div>
+
+
+@Html.Partial("_signup_news")
